# Banking_Data_Classifier

./: .gitignore  instruction.ipynb  pyproject.toml
Banking_Data_Classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
banking_data_classifier/: __init__.py  behavioral.py  cli.py  cli_functions.py  config.py  const.py  data_clean.py  data_ingest.py  evaluate.py  inference.py  quality.py  splits.py  train.py  train_hf.py  utils.py
mlruns/0/: meta.yaml
mlruns/0/4c195e1bccf4443eb42ff873c9b117cf/: meta.yaml
mlruns/0/4c195e1bccf4443eb42ff873c9b117cf/metrics/: epoch  eval_accuracy  eval_auroc_ovo_macro  eval_f1_macro  eval_loss  eval_runtime  eval_samples_per_second  eval_steps_per_second  grad_norm  learning_rate  loss  total_flos  train_loss  train_runtime  train_samples_per_second  train_steps_per_second
mlruns/0/4c195e1bccf4443eb42ff873c9b117cf/params/: logging_dir
mlruns/0/69fc719ff3e74b9d99f6b08e6e27a3de/: meta.yaml
mlruns/0/69fc719ff3e74b9d99f6b08e6e27a3de/metrics/: epoch  grad_norm  learning_rate  loss
mlruns/0/69fc719ff3e74b9d99f6b08e6e27a3de/params/: logging_dir
mlruns/0/d8c4b749c796422c9eed22eab78fdee2/: meta.yaml
mlruns/0/d8c4b749c796422c9eed22eab78fdee2/metrics/: epoch  grad_norm  learning_rate  loss
mlruns/0/d8c4b749c796422c9eed22eab78fdee2/params/: logging_dir
mlruns/0/d961473746fa4172ac5611f13f2e80ab/: meta.yaml
mlruns/0/d961473746fa4172ac5611f13f2e80ab/params/: logging_dir
mlruns/0/eb6b8e708b9a4158804841e4c27bf3c9/: meta.yaml
mlruns/0/eb6b8e708b9a4158804841e4c27bf3c9/metrics/: epoch  eval_accuracy  eval_loss  (+13 more)
(+4 files in other folders)
