[project]
name = "Banking_Data_Classifier"
version = "1.0.0"
description = ""
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "captum",
    "cleanlab",
"datasets<3",
    "giskard",
    "jupyter",
    "matplotlib",
    "pydantic>=2",
    "pandas",
    "ruff",
    "scikit-learn",
    "sentence-transformers",
    "typer>=0.9",
    "transformers[torch]"
]

[project.scripts]
banking_data_classifier = "banking_data_classifier.cli:app"

[tool.uv]
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.setuptools.packages.find]
include = ["banking_data_classifier*"]
exclude = ["artifacts", "configs"]
